--- a/app/src/main/res/layout/item_grid.xml
+++ b/app/src/main/res/layout/item_grid.xml
@@ -1,146 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    android:background="@drawable/shape_user_focus"
+    android:padding="@dimen/vs_1"
+    android:focusable="true"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/shape_user_focus"
-    android:focusable="true"
-    android:padding="@dimen/vs_1">
-
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <FrameLayout
         android:layout_width="@dimen/vs_214"
         android:layout_height="@dimen/vs_280">
-
         <ImageView
             android:id="@+id/ivThumb"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
             android:padding="@dimen/vs_1"
-            android:scaleType="fitXY" />
-
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:scaleType="fitXY"/>
         <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/vs_5"
             android:layout_marginTop="@dimen/vs_5"
-            android:layout_marginRight="@dimen/vs_5"
-            android:orientation="horizontal">
-
+            android:layout_marginRight="@dimen/vs_5">
             <TextView
+                android:textSize="@dimen/ts_20"
+                android:textColor="@android:color/white"
+                android:ellipsize="end"
+                android:gravity="center"
                 android:id="@+id/tvYear"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/vs_5"
-                android:layout_marginRight="@dimen/vs_5"
-                android:background="@drawable/shape_thumb_bottom_name"
-                android:ellipsize="end"
-                android:gravity="center"
+                android:background="@drawable/shape_thumb_bottom_name_1"
                 android:paddingLeft="@dimen/vs_5"
                 android:paddingRight="@dimen/vs_5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/vs_5"
                 android:singleLine="true"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/ts_20" />
-
+                android:layout_marginEnd="@dimen/vs_5"/>
             <TextView
+                android:textSize="@dimen/ts_20"
+                android:textColor="@android:color/white"
+                android:ellipsize="end"
+                android:gravity="center"
                 android:id="@+id/tvArea"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/vs_5"
-                android:layout_marginRight="@dimen/vs_5"
                 android:background="@drawable/shape_thumb_lang"
-                android:ellipsize="end"
-                android:gravity="center"
                 android:paddingLeft="@dimen/vs_5"
                 android:paddingRight="@dimen/vs_5"
-                android:singleLine="true"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/ts_20" />
-
-            <TextView
-                android:id="@+id/tvLang"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/vs_5"
                 android:layout_marginRight="@dimen/vs_5"
-                android:background="@drawable/shape_thumb_year"
+                android:singleLine="true"
+                android:layout_marginEnd="@dimen/vs_5"/>
+            <TextView
+                android:textSize="@dimen/ts_20"
+                android:textColor="@android:color/white"
                 android:ellipsize="end"
                 android:gravity="center"
+                android:id="@+id/tvLang"
+                android:background="@drawable/shape_thumb_year"
                 android:paddingLeft="@dimen/vs_5"
                 android:paddingRight="@dimen/vs_5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/vs_5"
                 android:singleLine="true"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/ts_20" />
-
+                android:layout_marginEnd="@dimen/vs_5"/>
         </LinearLayout>
-
-
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:orientation="vertical"
-            android:padding="@dimen/vs_1">
-
+            android:padding="@dimen/vs_1"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
             <TextView
+                android:textSize="@dimen/ts_20"
+                android:textColor="@android:color/white"
+                android:ellipsize="end"
+                android:gravity="center"
+                android:layout_gravity="bottom"
                 android:id="@+id/tvNote"
+                android:background="@drawable/shape_thumb_note"
+                android:paddingLeft="@dimen/vs_5"
+                android:paddingRight="@dimen/vs_5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
                 android:layout_marginLeft="@dimen/vs_5"
                 android:layout_marginRight="@dimen/vs_5"
                 android:layout_marginBottom="@dimen/vs_5"
-                android:background="@drawable/shape_thumb_note"
-                android:ellipsize="end"
-                android:gravity="center"
-                android:paddingLeft="@dimen/vs_5"
-                android:paddingRight="@dimen/vs_5"
-                android:singleLine="true"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/ts_20" />
-
+                android:singleLine="true"/>
             <TextView
-                android:id="@+id/tvName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/shape_thumb_bottom_name"
+                android:textSize="@dimen/ts_22"
+                android:textColor="@android:color/white"
                 android:ellipsize="marquee"
                 android:gravity="center"
-                android:marqueeRepeatLimit="marquee_forever"
-                android:padding="@dimen/vs_5"
-                android:singleLine="true"
-                android:text="Title"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/ts_22" />
-
-            <TextView
-                android:id="@+id/tvActor"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:id="@+id/tvName"
                 android:background="@drawable/shape_thumb_bottom_name"
+                android:padding="@dimen/vs_5"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Title"
+                android:singleLine="true"
+                android:marqueeRepeatLimit="marquee_forever"/>
+            <TextView
+                android:textSize="@dimen/ts_16"
+                android:textColor="@android:color/white"
                 android:ellipsize="end"
                 android:gravity="top"
+                android:id="@+id/tvActor"
+                android:background="@drawable/shape_thumb_bottom_name"
                 android:padding="@dimen/vs_5"
-                android:singleLine="true"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/ts_16"
-                android:visibility="gone" />
+                android:visibility="gone"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:singleLine="true"/>
         </LinearLayout>
-        
         <FrameLayout
-            android:id="@+id/delFrameLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/shape_user_delete"
             android:layout_gravity="center"
-            android:visibility="gone">
-
+            android:id="@+id/delFrameLayout"
+            android:background="@drawable/shape_user_delete"
+            android:visibility="gone"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
             <ImageView
+                android:layout_gravity="center"
                 android:id="@+id/imageView"
                 android:layout_width="@dimen/vs_80"
                 android:layout_height="@dimen/vs_80"
-                android:layout_gravity="center"
                 android:layout_marginBottom="@dimen/vs_20"
-                android:src="@drawable/icon_delete" />
+                android:src="@drawable/icon_delete"/>
         </FrameLayout>
-        
     </FrameLayout>
 </FrameLayout>
