--- a/app/src/main/res/layout/item_search_word_split.xml
+++ b/app/src/main/res/layout/item_search_word_split.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/tvSearchWord"
+<TextView
+    android:textSize="@dimen/ts_24"
+    android:textColor="@color/color_FFFFFF"
+    android:ellipsize="end"
+    android:gravity="center_vertical"
+    android:id="@id/tvSearchWord"
+    android:background="@drawable/button_dialog_main"
+    android:paddingLeft="@dimen/vs_8"
+    android:paddingRight="@dimen/vs_8"
+    android:paddingTop="@dimen/vs_6"
+    android:paddingBottom="@dimen/vs_6"
+    android:focusable="true"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/vs_5"
-    android:background="@drawable/button_dialog_main"
-    android:ellipsize="end"
-    android:focusable="true"
-    android:gravity="center_vertical"
-    android:padding="@dimen/vs_8"
     android:singleLine="true"
-    android:textColor="@color/color_FFFFFF"
-    android:textSize="@dimen/ts_20" />
+    xmlns:android="http://schemas.android.com/apk/res/android" />
