--- a/app/src/main/res/drawable/img_loading_placeholder.xml
+++ b/app/src/main/res/drawable/img_loading_placeholder.xml
@@ -2,14 +2,14 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <solid android:color="#36ffffff" />
-            <corners android:radius="10mm" />
+            <solid android:color="#36ffffff"/>
+            <corners android:radius="10.0mm"/>
         </shape>
     </item>
     <item>
         <bitmap
-            android:antialias="true"
-            android:gravity="center"
-            android:src="@drawable/icon_img_placeholder" />
+            android:src="@drawable/icon_img_placeholder"
+            android:scaleType="centerCrop"
+            android:antialias="true"/>
     </item>
 </layer-list>
