--- a/app/src/main/res/layout/activity_collect.xml
+++ b/app/src/main/res/layout/activity_collect.xml
@@ -1,88 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
+<LinearLayout
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clipChildren="false"
-        android:clipToPadding="false"
         android:orientation="horizontal"
         android:paddingLeft="@dimen/vs_50"
         android:paddingTop="@dimen/vs_20"
         android:paddingRight="@dimen/vs_50"
-        android:paddingBottom="@dimen/vs_20">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/vs_50"
-            android:drawablePadding="@dimen/vs_10"
-            android:gravity="center"
-            android:text="收藏夹"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/ts_34"
-            android:textStyle="bold" />
-
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-        <TextView
-            android:id="@+id/tvDelTip"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/vs_50"
-            android:layout_gravity="center"
-            android:layout_marginRight="@dimen/vs_10"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:gravity="center"
-            android:text="确定键删除当前选中收藏"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/ts_24"
-            android:visibility="gone" />
-
-        <ImageView
-            android:id="@+id/tvDelete"
-            android:layout_width="@dimen/vs_50"
-            android:layout_height="@dimen/vs_50"
-            android:layout_marginStart="@dimen/vs_10"
-            android:layout_marginEnd="@dimen/vs_10"
-            android:gravity="center"
-            android:background="@drawable/button_dialog_vod"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:padding="@dimen/vs_5"
-            android:src="@drawable/icon_delete" />
-
-        <ImageView
-            android:id="@+id/tvClear"
-            android:layout_width="@dimen/vs_50"
-            android:layout_height="@dimen/vs_50"
-            android:layout_marginStart="@dimen/vs_10"
-            android:layout_marginEnd="@dimen/vs_10"
-            android:gravity="center"
-            android:background="@drawable/button_dialog_vod"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:padding="@dimen/vs_5"
-            android:src="@drawable/icon_clear" />
-    </LinearLayout>
-
-    <com.owen.tvrecyclerview.widget.TvRecyclerView
-        android:id="@+id/mGridView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/vs_20"
         android:clipChildren="false"
         android:clipToPadding="false"
-        android:paddingLeft="@dimen/vs_60"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:textSize="@dimen/ts_34"
+            android:textStyle="bold"
+            android:textColor="@android:color/white"
+            android:gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/vs_50"
+            android:text="收藏夹"
+            android:drawablePadding="@dimen/vs_10"/>
+        <Space
+            android:layout_width="0.0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.0"/>
+        <TextView
+            android:textSize="@dimen/ts_24"
+            android:textColor="@android:color/white"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:id="@+id/tvDelTip"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/vs_50"
+            android:layout_marginRight="@dimen/vs_10"
+            android:text="确定键删除当前选中收藏"/>
+        <ImageView
+            android:gravity="center"
+            android:id="@+id/tvDelete"
+            android:background="@drawable/button_dialog_vod"
+            android:padding="@dimen/vs_5"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:layout_width="@dimen/vs_50"
+            android:layout_height="@dimen/vs_50"
+            android:src="@drawable/icon_delete"
+            android:layout_marginStart="@dimen/vs_10"
+            android:layout_marginEnd="@dimen/vs_0"/>
+        <ImageView
+            android:gravity="center"
+            android:id="@+id/tvClear"
+            android:background="@drawable/button_dialog_vod"
+            android:padding="@dimen/vs_5"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:layout_width="@dimen/vs_50"
+            android:layout_height="@dimen/vs_50"
+            android:src="@drawable/icon_clear"
+            android:layout_marginStart="@dimen/vs_10"
+            android:layout_marginEnd="@dimen/vs_0"/>
+    </LinearLayout>
+    <com.owen.tvrecyclerview.widget.TvRecyclerView
+        android:id="@+id/mGridView"
+        android:paddingLeft="48mm"
         android:paddingTop="@dimen/vs_10"
-        android:paddingRight="@dimen/vs_60"
+        android:paddingRight="48mm"
         android:paddingBottom="@dimen/vs_10"
-        app:tv_horizontalSpacingWithMargins="@dimen/vs_10"
+        android:clipChildren="false"
+        android:clipToPadding="false"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        app:tv_horizontalSpacingWithMargins="@dimen/vs_15"
         app:tv_selectedItemIsCentered="true"
-        app:tv_verticalSpacingWithMargins="@dimen/vs_10" />
+        app:tv_verticalSpacingWithMargins="@dimen/vs_10"/>
 </LinearLayout>
