--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -8,24 +8,23 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content">
         <LinearLayout
             android:orientation="horizontal"
             android:id="@+id/tvUserHome"
+            android:paddingLeft="@dimen/vs_2"
+            android:paddingRight="@dimen/vs_1"
             android:focusable="false"
             android:focusableInTouchMode="false"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content">
             <LinearLayout
                 android:layout_gravity="center"
                 android:orientation="horizontal"
                 android:id="@+id/tvHistory"
                 android:background="@drawable/shape_user_focus"
-                android:paddingLeft="@dimen/vs_14"
-                android:paddingTop="@dimen/vs_15"
-                android:paddingRight="@dimen/vs_14"
-                android:paddingBottom="@dimen/vs_15"
+                android:padding="@dimen/vs_15"
                 android:focusable="true"
                 android:nextFocusLeft="@+id/tvxuameng"
                 android:clipChildren="false"
@@ -59,10 +58,7 @@
                 android:orientation="horizontal"
                 android:id="@+id/tvLive"
                 android:background="@drawable/shape_user_focus"
-                android:paddingLeft="@dimen/vs_14"
-                android:paddingTop="@dimen/vs_15"
-                android:paddingRight="@dimen/vs_14"
-                android:paddingBottom="@dimen/vs_15"
+                android:padding="@dimen/vs_15"
                 android:focusable="true"
                 android:clipChildren="false"
                 android:clipToPadding="false"
@@ -95,10 +91,7 @@
                 android:orientation="horizontal"
                 android:id="@+id/tvSearch"
                 android:background="@drawable/shape_user_focus"
-                android:paddingLeft="@dimen/vs_14"
-                android:paddingTop="@dimen/vs_15"
-                android:paddingRight="@dimen/vs_14"
-                android:paddingBottom="@dimen/vs_15"
+                android:padding="@dimen/vs_15"
                 android:focusable="true"
                 android:clipChildren="false"
                 android:clipToPadding="false"
@@ -131,10 +124,7 @@
                 android:orientation="horizontal"
                 android:id="@+id/tvPush"
                 android:background="@drawable/shape_user_focus"
-                android:paddingLeft="@dimen/vs_14"
-                android:paddingTop="@dimen/vs_15"
-                android:paddingRight="@dimen/vs_14"
-                android:paddingBottom="@dimen/vs_15"
+                android:padding="@dimen/vs_15"
                 android:focusable="true"
                 android:clipChildren="false"
                 android:clipToPadding="false"
@@ -167,10 +157,7 @@
                 android:orientation="horizontal"
                 android:id="@+id/tvFavorite"
                 android:background="@drawable/shape_user_focus"
-                android:paddingLeft="@dimen/vs_14"
-                android:paddingTop="@dimen/vs_15"
-                android:paddingRight="@dimen/vs_14"
-                android:paddingBottom="@dimen/vs_15"
+                android:padding="@dimen/vs_15"
                 android:focusable="true"
                 android:clipChildren="false"
                 android:clipToPadding="false"
@@ -203,10 +190,7 @@
                 android:orientation="horizontal"
                 android:id="@+id/tvSetting"
                 android:background="@drawable/shape_user_focus"
-                android:paddingLeft="@dimen/vs_14"
-                android:paddingTop="@dimen/vs_15"
-                android:paddingRight="@dimen/vs_14"
-                android:paddingBottom="@dimen/vs_15"
+                android:padding="@dimen/vs_15"
                 android:focusable="true"
                 android:clipChildren="false"
                 android:clipToPadding="false"
@@ -236,22 +220,24 @@
             </LinearLayout>
             <LinearLayout
                 android:layout_gravity="center"
+                android:gravity="center"
                 android:orientation="horizontal"
                 android:id="@+id/tvxuameng"
                 android:background="@drawable/shape_user_focus"
-                android:paddingLeft="@dimen/vs_14"
+                android:paddingLeft="@dimen/vs_5"
                 android:paddingTop="@dimen/vs_15"
-                android:paddingRight="@dimen/vs_14"
+                android:paddingRight="@dimen/vs_5"
                 android:paddingBottom="@dimen/vs_15"
                 android:focusable="true"
                 android:nextFocusRight="@+id/tvHistory"
                 android:clipChildren="false"
                 android:clipToPadding="false"
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="@dimen/vs_80"
                 android:layout_margin="@dimen/vs_3">
                 <ImageView
                     android:layout_gravity="center"
+                    android:gravity="center"
                     android:layout_width="@dimen/ts_60"
                     android:layout_height="@dimen/ts_60"
                     android:src="@drawable/lilijuan"
@@ -284,7 +270,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvUserHome"
-            app:tv_horizontalSpacingWithMargins="@dimen/vs_10"
+            app:tv_horizontalSpacingWithMargins="@dimen/vs_15"
             app:tv_layoutManager="V7GridLayoutManager"
             app:tv_selectedItemIsCentered="true"
             app:tv_verticalSpacingWithMargins="@dimen/vs_10"/>
@@ -301,7 +287,7 @@
             android:layout_width="fill_parent"
             android:layout_height="@dimen/vs_440"
             android:layout_below="@+id/tvUserHome"
-            app:tv_horizontalSpacingWithMargins="@dimen/vs_10"
+            app:tv_horizontalSpacingWithMargins="@dimen/vs_15"
             app:tv_layoutManager="V7LinearLayoutManager"
             app:tv_selectedItemIsCentered="true"
             app:tv_verticalSpacingWithMargins="@dimen/vs_10"/>
