--- a/app/src/main/res/layout/item_user_hot_vod.xml
+++ b/app/src/main/res/layout/item_user_hot_vod.xml
@@ -8,8 +8,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <FrameLayout
         android:id="@+id/mItemFrame"
-        android:layout_width="@dimen/vs_214"
-        android:layout_height="@dimen/vs_280">
+        android:layout_width="wrap_content"
+        android:layout_height="291mm">
         <ImageView
             android:id="@+id/ivThumb"
             android:padding="@dimen/vs_1"
