--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -15,6 +15,7 @@
             android:id="@+id/tvUserHome"
             android:paddingLeft="@dimen/vs_2"
             android:paddingRight="@dimen/vs_1"
+            android:paddingBottom="@dimen/vs_5"
             android:focusable="false"
             android:focusableInTouchMode="false"
             android:layout_width="fill_parent"
@@ -261,7 +262,7 @@
         <com.owen.tvrecyclerview.widget.TvRecyclerView
             android:id="@+id/tvHotList1"
             android:paddingLeft="@dimen/vs_5"
-            android:paddingTop="@dimen/vs_15"
+            android:paddingTop="@dimen/vs_10"
             android:paddingRight="@dimen/vs_5"
             android:paddingBottom="@dimen/vs_15"
             android:visibility="gone"
@@ -278,7 +279,7 @@
             android:orientation="horizontal"
             android:id="@+id/tvHotList2"
             android:paddingLeft="@dimen/vs_5"
-            android:paddingTop="@dimen/vs_15"
+            android:paddingTop="@dimen/vs_10"
             android:paddingRight="@dimen/vs_5"
             android:paddingBottom="@dimen/vs_15"
             android:visibility="gone"
