--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -38,7 +38,7 @@
                     android:layout_width="@dimen/ts_xu"
                     android:layout_height="@dimen/ts_xu"
                     android:src="@drawable/icon_history"
-                    android:alpha="0.9"/>
+                    android:alpha="0.9" />
                 <TextView
                     android:textSize="@dimen/vs_xu"
                     android:textStyle="bold"
@@ -52,7 +52,7 @@
                     android:layout_marginLeft="@dimen/vs_10"
                     android:text="历史"
                     android:textAlignment="gravity"
-                    android:letterSpacing="0.1"/>
+                    android:letterSpacing="0.1" />
             </LinearLayout>
             <LinearLayout
                 android:layout_gravity="center"
@@ -71,7 +71,7 @@
                     android:layout_width="@dimen/ts_xu"
                     android:layout_height="@dimen/ts_xu"
                     android:src="@drawable/icon_live"
-                    android:alpha="0.9"/>
+                    android:alpha="0.9" />
                 <TextView
                     android:textSize="@dimen/vs_xu"
                     android:textStyle="bold"
@@ -85,7 +85,7 @@
                     android:layout_marginLeft="@dimen/vs_10"
                     android:text="直播"
                     android:textAlignment="gravity"
-                    android:letterSpacing="0.1"/>
+                    android:letterSpacing="0.1" />
             </LinearLayout>
             <LinearLayout
                 android:layout_gravity="center"
@@ -104,7 +104,7 @@
                     android:layout_width="@dimen/ts_xu"
                     android:layout_height="@dimen/ts_xu"
                     android:src="@drawable/icon_search"
-                    android:alpha="0.9"/>
+                    android:alpha="0.9" />
                 <TextView
                     android:textSize="@dimen/vs_xu"
                     android:textStyle="bold"
@@ -118,7 +118,7 @@
                     android:layout_marginLeft="@dimen/vs_10"
                     android:text="搜索"
                     android:textAlignment="gravity"
-                    android:letterSpacing="0.1"/>
+                    android:letterSpacing="0.1" />
             </LinearLayout>
             <LinearLayout
                 android:layout_gravity="center"
@@ -137,7 +137,7 @@
                     android:layout_width="@dimen/ts_xu"
                     android:layout_height="@dimen/ts_xu"
                     android:src="@drawable/icon_push"
-                    android:alpha="0.9"/>
+                    android:alpha="0.9" />
                 <TextView
                     android:textSize="@dimen/vs_xu"
                     android:textStyle="bold"
@@ -151,7 +151,7 @@
                     android:layout_marginLeft="@dimen/vs_10"
                     android:text="推送"
                     android:textAlignment="gravity"
-                    android:letterSpacing="0.1"/>
+                    android:letterSpacing="0.1" />
             </LinearLayout>
             <LinearLayout
                 android:layout_gravity="center"
@@ -170,7 +170,7 @@
                     android:layout_width="@dimen/ts_xu"
                     android:layout_height="@dimen/ts_xu"
                     android:src="@drawable/icon_collect"
-                    android:alpha="0.9"/>
+                    android:alpha="0.9" />
                 <TextView
                     android:textSize="@dimen/vs_xu"
                     android:textStyle="bold"
@@ -184,7 +184,7 @@
                     android:layout_marginLeft="@dimen/vs_10"
                     android:text="收藏"
                     android:textAlignment="gravity"
-                    android:letterSpacing="0.1"/>
+                    android:letterSpacing="0.1" />
             </LinearLayout>
             <LinearLayout
                 android:layout_gravity="center"
@@ -203,7 +203,7 @@
                     android:layout_width="@dimen/ts_xu"
                     android:layout_height="@dimen/ts_xu"
                     android:src="@drawable/icon_setting"
-                    android:alpha="0.9"/>
+                    android:alpha="0.9" />
                 <TextView
                     android:textSize="@dimen/vs_xu"
                     android:textStyle="bold"
@@ -217,11 +217,11 @@
                     android:layout_marginLeft="@dimen/vs_10"
                     android:text="设置"
                     android:textAlignment="gravity"
-                    android:letterSpacing="0.1"/>
+                    android:letterSpacing="0.1" />
             </LinearLayout>
             <LinearLayout
-                android:layout_gravity="center"
                 android:gravity="center"
+                android:layout_gravity="center"
                 android:orientation="horizontal"
                 android:id="@+id/tvxuameng"
                 android:background="@drawable/shape_user_focus"
@@ -237,12 +237,12 @@
                 android:layout_height="@dimen/vs_80"
                 android:layout_margin="@dimen/vs_3">
                 <ImageView
-                    android:layout_gravity="center"
                     android:gravity="center"
+                    android:layout_gravity="center"
                     android:layout_width="@dimen/ts_60"
                     android:layout_height="@dimen/ts_60"
                     android:src="@drawable/lilijuan"
-                    android:alpha="0.9"/>
+                    android:alpha="0.9" />
                 <TextView
                     android:textSize="@dimen/vs_xu"
                     android:textStyle="bold"
@@ -256,7 +256,7 @@
                     android:layout_marginLeft="@dimen/vs_10"
                     android:text="许大师制作"
                     android:textAlignment="gravity"
-                    android:letterSpacing="0.1"/>
+                    android:letterSpacing="0.1" />
             </LinearLayout>
         </LinearLayout>
         <com.owen.tvrecyclerview.widget.TvRecyclerView
@@ -274,7 +274,7 @@
             app:tv_horizontalSpacingWithMargins="@dimen/vs_15"
             app:tv_layoutManager="V7GridLayoutManager"
             app:tv_selectedItemIsCentered="true"
-            app:tv_verticalSpacingWithMargins="@dimen/vs_10"/>
+            app:tv_verticalSpacingWithMargins="@dimen/vs_10" />
         <com.owen.tvrecyclerview.widget.TvRecyclerView
             android:orientation="horizontal"
             android:id="@+id/tvHotList2"
@@ -286,11 +286,11 @@
             android:clipChildren="false"
             android:clipToPadding="false"
             android:layout_width="fill_parent"
-            android:layout_height="@dimen/vs_440"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/tvUserHome"
             app:tv_horizontalSpacingWithMargins="@dimen/vs_15"
             app:tv_layoutManager="V7LinearLayoutManager"
             app:tv_selectedItemIsCentered="true"
-            app:tv_verticalSpacingWithMargins="@dimen/vs_10"/>
+            app:tv_verticalSpacingWithMargins="@dimen/vs_10" />
     </RelativeLayout>
 </RelativeLayout>
